--- a/Gestor_Proyectos-main/package.json
+++ b/Gestor_Proyectos-main/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@headlessui/react": "^1.7.18",
     "axios": "^1.6.7",
+    "emailjs": "^4.0.3",
     "kutty": "^0.6.0",
     "leaflet": "^1.9.4",
     "react": "^18.2.0",
